# LudoGraph

./: CMakeLists.txt  board.h  construct.h  editor.cpp  editorwindows.cpp  editorwindows.h  global.cpp  global.h  inspector.cpp  inspector.h  segment.cpp  segment.h  transition.cpp  transition.h
src/: qt_main.cpp
